# zero-shot-classifier-app

./: Dockerfile  README.md  app.py  pyproject.toml
